# claude-mcp-schwab-trader-api

./: .env.dist  .gitignore  AGENTS.md  CONNECTOR_TODO.md  DEVELOPING.md  Dockerfile  MCP_TODO.md  PROVIDER_TODO.md  README.md  RISK.md  account-profiles.example.yaml  docker-compose.yml  pyproject.toml
mcp_servers/: docker-compose.yml
mcp_servers/factor_connector/: AGENTS.md  Dockerfile  README.md  pyproject.toml
mcp_servers/factor_connector/src/factor_connector/: __init__.py  french_client.py  server.py
mcp_servers/fed_calendar_connector/: AGENTS.md  Dockerfile  README.md  pyproject.toml
mcp_servers/fed_calendar_connector/src/fed_calendar_connector/: __init__.py  fomc_scraper.py  server.py
mcp_servers/fred_connector/: AGENTS.md  Dockerfile  README.md  pyproject.toml
mcp_servers/fred_connector/src/fred_connector/: __init__.py  fred_client.py  server.py
mcp_servers/schwab_connector/: AGENTS.md  Dockerfile  README.md  pyproject.toml
mcp_servers/schwab_connector/src/schwab_connector/: __main__.py  schwab_client.py  server.py
mcp_servers/treasury_connector/: Dockerfile  README.md  pyproject.toml
mcp_servers/treasury_connector/src/treasury_connector/: __init__.py  server.py  treasury_client.py
mcp_servers/yahoo_connector/: AGENTS.md  Dockerfile  README.md  pyproject.toml
mcp_servers/yahoo_connector/src/yahoo_connector/: __init__.py  server.py  ta.py  yahoo_client.py
scripts/: docker-entrypoint.sh
src/tos_connector/: __init__.py  __main__.py  auth.py  schwab_client.py  server.py  ta.py
src/traider/: __init__.py  __main__.py  logging_utils.py  server.py  settings.py
src/traider/connectors/: __init__.py
src/traider/connectors/factor/: __init__.py
src/traider/connectors/fed_calendar/: __init__.py
src/traider/connectors/fred/: AGENTS.md  __init__.py
src/traider/connectors/news/: __init__.py
src/traider/connectors/schwab/: README.md  __init__.py  auth.py
src/traider/connectors/sec_edgar/: __init__.py  tools.py
src/traider/connectors/treasury/: AGENTS.md  __init__.py
src/traider/connectors/yahoo/: __init__.py  analytics.py  ta.py  tools.py  yahoo_client.py
src/traider/ohlcv/: __init__.py  analytics.py  ta.py
src/traider/options/: __init__.py  summary.py
src/traider/providers/cftc/: README.md  __init__.py  cftc_client.py  tools.py
src/traider/providers/earnings/: finnhub_client.py
src/traider/providers/estimates/: README.md  __init__.py  finnhub_client.py  tools.py
src/traider/providers/factor/: french_client.py
src/traider/providers/fed_calendar/: fomc_scraper.py
src/traider/providers/fred/: README.md  analytics.py  fred_client.py  tools.py
src/traider/providers/intent/: account_profile.py  tools.py
src/traider/providers/news/: massive_client.py
src/traider/providers/schwab/: README.md  auth.py  schwab_client.py  tools.py
src/traider/providers/sec_edgar/: edgar_client.py  form13f_parser.py  form4_parser.py  ticker_map.py  tools.py
src/traider/providers/treasury/: treasury_client.py
src/traider/providers/yahoo/: tools.py  yahoo_client.py
todo/: PROVIDERS.md  QA.md
