[project]
name = "factor-connector"
version = "0.1.0"
description = "Read-only Ken French Data Library connector exposed as an MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
factor-connector = "factor_connector.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/factor_connector"]
