[project]
name = "schwab-connector"
version = "0.3.0"
description = "Read-only Schwab Trader API connector exposed as an MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "TA-Lib>=0.4.28",
]

[project.scripts]
schwab-connector = "schwab_connector.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schwab_connector"]
