[project]
name = "yahoo-connector"
version = "0.1.0"
description = "Read-only Yahoo Finance connector exposed as an MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "TA-Lib>=0.4.28",
    "yfinance>=0.2.40",
]

[project.scripts]
yahoo-connector = "yahoo_connector.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_connector"]
